# nomad.llm

./: CMakeLists.txt  README.md
nomad-llm/: CMakeLists.txt
nomad-llm/qml/: Theme.qml  main.qml  qmldir
nomad-llm/qml/components/: ChatArea.qml  ChatInputBar.qml  ImageEditorPopup.qml  PersonalityPopup.qml  SettingsDrawer.qml  SidebarView.qml  StatusBar.qml  StorageManagerDrawer.qml
nomad-llm/qml/onboarding/: HardwareScanStep.qml  ModelSelectStep.qml  OnboardingWizard.qml  ReadyStep.qml  WelcomeStep.qml
nomad-llm/src/: ILlmBackend.h  LlamaBackend.cpp  LlamaBackend.h  VisionBackend.cpp  VisionBackend.h  database_manager.cpp  database_manager.h  document_processor.cpp  document_processor.h  embedding_engine.cpp  embedding_engine.h  hardware_detector.cpp  hardware_detector.h  inference_engine.cpp  inference_engine.h  js_engine.cpp  main.cpp  memory_manager.cpp  memory_manager.h  model_manager.cpp  model_manager.h  script_engine.cpp  sd_engine.cpp  sd_engine.h  settings_manager.cpp  settings_manager.h  voice_manager.cpp  wasm_engine.cpp
tests/: CMakeLists.txt  tst_database_manager.cpp  tst_hardware_detector.cpp  tst_memory_manager.cpp  tst_settings_manager.cpp  tst_ui_runner.cpp
tests/qml/: tst_main.qml
